--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".service.TrackingService"
+            android:foregroundServiceType="location">
+        </service>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
